--- a/article.amp.html
+++ b/article.amp.html
@@ -118,7 +118,7 @@ limitations under the License.
   <!-- Start Fullpage Hero -->
   <figure class="ampstart-image-fullpage-hero m0 relative mb4">
     <amp-img width="404" height="720" alt="The Year&#39;s Best Animal Photos" layout="responsive" src="../Westbengal/img/article/elephants_narrow.png" media="(max-width: 415px)"></amp-img>
-    <amp-img height="720" alt="The Year&#39;s Best Animal Photos" layout="fixed-height" src="../Westbengal/img/article/elephants_wide.jpg" media="(min-width: 416px)"></amp-img>
+    <amp-img height="720" alt="The Year&#39;s Best Animal Photos" layout="fixed-height" src="../Westbengal/img/elephants_wide.jpg" media="(min-width: 416px)"></amp-img>
     <figcaption class="absolute top-0 right-0 bottom-0 left-0">
       <header class="p3">
         <h1 class="ampstart-fullpage-hero-heading mb3">
@@ -155,7 +155,7 @@ limitations under the License.
 
   <!-- Start Image with Caption -->
   <figure class="ampstart-image-with-caption m0 relative mb4">
-    <amp-img src="../Westbengal/img/article/gorilla.png" width="756" height="520" alt="Description of the photograph." layout="responsive" class=""></amp-img>
+    <amp-img src="../Westbengal/img/gorilla.png" width="756" height="520" alt="Description of the photograph." layout="responsive" class=""></amp-img>
     <figcaption class="h5 mt1 px3">
       Description of the photograph.
         <span class="ampstart-image-credit block bold">
@@ -173,7 +173,7 @@ limitations under the License.
 
   <!-- Start Image with Caption -->
   <figure class="ampstart-image-with-caption m0 relative mb4">
-    <amp-img src="../Westbengal/img/article/zebras.jpg" width="756" height="520" alt="Zebras grazing." layout="responsive" class=""></amp-img>
+    <amp-img src="../Westbengal/img/zebras.jpg" width="756" height="520" alt="Zebras grazing." layout="responsive" class=""></amp-img>
     <figcaption class="h5 mt1 px3">
       Zebras grazing.
         <span class="ampstart-image-credit block bold">
@@ -187,7 +187,7 @@ limitations under the License.
 
   <!-- Start Image with Caption -->
   <figure class="ampstart-image-with-caption m0 relative mb4">
-    <amp-img src="../Westbengal/img/article/sheep.jpg" width="756" height="520" alt="Sheep in a field." layout="responsive" class=""></amp-img>
+    <amp-img src="../Westbengal/img/sheep.jpg" width="756" height="520" alt="Sheep in a field." layout="responsive" class=""></amp-img>
     <figcaption class="h5 mt1 px3">
       Sheep in a field.
         <span class="ampstart-image-credit block bold">
@@ -201,7 +201,7 @@ limitations under the License.
 
   <!-- Start Image with Caption -->
   <figure class="ampstart-image-with-caption m0 relative mb4">
-    <amp-img src="../Westbengal/img/article/camels.jpg" width="756" height="520" alt="Camels on a beach." layout="responsive" class=""></amp-img>
+    <amp-img src="../Westbengal/img/camels.jpg" width="756" height="520" alt="Camels on a beach." layout="responsive" class=""></amp-img>
     <figcaption class="h5 mt1 px3">
       Camels on a beach.
         <span class="ampstart-image-credit block bold">
@@ -229,7 +229,7 @@ limitations under the License.
 <section class="ampstart-related-article-section p3 mb4 border-top border-bottom">
       <h2 class="ampstart-heading ampstart-label m0 mb3">Related article</h2>
   <article class="ampstart-related-article">
-      <amp-img src="../Westbengal/img/article/sloth.png" width="656" height="248" layout="responsive" alt="" class="mb3"></amp-img>
+      <amp-img src="../Westbengal/img/sloth.png" width="656" height="248" layout="responsive" alt="" class="mb3"></amp-img>
         <h3 class="ampstart-heading h4 m0 mb3">Sloths on the move</h3>
       <p class="line-height-4 mb3">
         Duis nisl sem, gravida sed sapien sed, ultrices varius sem. Aliquam venenatis aliquam lobortis. Nam et euismod eros. Nunc gravida egestas arcu, sed laoreet nunc rutrum ultrices. Nunc fermentum consequat laoreet.
@@ -263,7 +263,7 @@ limitations under the License.
 
   <!-- Start Image with Caption -->
   <figure class="ampstart-image-with-caption m0 relative mb4">
-    <amp-img src="../Westbengal/img/article/bird.png" width="233" height="202" alt="Bullseye view: Bird Watching 101" layout="responsive" class=""></amp-img>
+    <amp-img src="../Westbengal/img/bird.png" width="233" height="202" alt="Bullseye view: Bird Watching 101" layout="responsive" class=""></amp-img>
     <figcaption class="h5 mt1 px3">
       Bullseye view: Bird Watching 101
     </figcaption>
@@ -275,7 +275,7 @@ limitations under the License.
 
   <!-- Start Image with Caption -->
   <figure class="ampstart-image-with-caption m0 relative mb4">
-    <amp-img src="../img/article/cheetah.png" width="233" height="202" alt="The Worlds fastest animal" layout="responsive" class=""></amp-img>
+    <amp-img src="../img/cheetah.png" width="233" height="202" alt="The Worlds fastest animal" layout="responsive" class=""></amp-img>
     <figcaption class="h5 mt1 px3">
       The Worlds fastest animal
     </figcaption>
@@ -287,7 +287,7 @@ limitations under the License.
 
   <!-- Start Image with Caption -->
   <figure class="ampstart-image-with-caption m0 relative mb4">
-    <amp-img src="../img/article/cow.png" width="233" height="202" alt="Cattle Ranch roundup" layout="responsive" class=""></amp-img>
+    <amp-img src="../img/cow.png" width="233" height="202" alt="Cattle Ranch roundup" layout="responsive" class=""></amp-img>
     <figcaption class="h5 mt1 px3">
       Cattle Ranch roundup
     </figcaption>
